test/org/midica/testfiles/failing/const-assigner-double.midica
INSTRUMENTS
	0    PERCUSSIVE_ORGAN       PERCUSSIVE_ORGAN
END

CONST $x==103

0  c  /4  v=$x
